      with Gpodder service.
    * Possibility to browse through podcasts suggested by gpodder.net and
      through gpodder.net top recommended podcasts.
    * Made possible to make presets for TagGuesser. (BR 264632)
    * Display current timestamp in tray tooltip. (BR 278445)
    * Auto-save the playlist so that it is not lost if Amarok crashes.

  CHANGES:
    * Make delete confirmation dialog text less confusing. Patch by Gilles Habran.
      (BR 263693)
    * Removed never-working right-mouse-button action to unset iPod album cover.
    * Removed the confusing ability to edit the navigation breadcrumb.
    * BPM is now read from/saved to media devices (e.g. iPod).
    * Track last played date and time is now correctly read from/saved to iPods.
    * Depend on KDE 4.6 - various bugs were caused by older versions.
    * Total rewrite of Automated Playlist Generator algorithm.  New algorithm
      is far less complicated and crash-prone, but at the cost of taking
      longer to converge when the constraint tree is complicated. (BR 240927,
      BR 240301)
    * Added local podcasts are automatically subscribed in gpodder.net.
    * Removed local podcasts are automatically unsubscribed from gpodder.net.
    * GPodder Service automatically subscribes all local podcasts into
      gpodder.net when the login is successfull.
    * Improved the playlist synchronisation feature.
    * Make possible to get count tracks before the XSPF file is fully loaded.
    * Mark unplayble tracks in the playlist. Patch by Sandeep Raghuraman. (BR 263640)
    * Current track applet: show number of artists instead of genres. (BR 261077)

  BUGFIXES:
    * Fix the Metadata property of the MPRIS2 interface
    * Fixed Wikipedia search field not accepting space character or cursor
      keys. (BR 266591)
    * Fix SupportedMimeTypes method on the MPRIS2 D-Bus interface, so that it
      no longer appends duplicate entries on every call.